tools/tests/ui/fail/l1083.cnf
// Test file for error code: L1083
// Expected error: Underflow Undefined character in expression -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
